--- a/views/field_research.ejs
+++ b/views/field_research.ejs
@@ -3,53 +3,12 @@
     <head>
         <title>Lĩnh vực nghiên cứu</title>
         <meta charset="utf-8">
-        <style>
-            body {
-                margin: 0;
-                padding: 0;
-            }
-            a {
-                text-decoration: none;
-            }
-            ul, li {
-                list-style: none;
-            }
-            #content {
-                padding: 0 30px;
-            }
-            #field-list {
-                padding: 0 20px;
-                border: 1px solid grey;
-            }
-            #create {
-                background-color: cyan;
-                position: fixed;
-                border: 1px solid gray;
-                padding: 1px;
-                cursor: pointer;
-                margin-left: 20px;
-            }
-            #edit {
-                background-color: cyan;
-                position: fixed;
-                border: 1px solid gray;
-                padding: 1px;
-                cursor: pointer;
-                margin-left: 70px;
-            }
-            #del {
-                background-color: cyan;
-                position: fixed;
-                border: 1px solid gray;
-                padding: 1px;
-                cursor: pointer;
-                margin-left: 107px;
-            }
-        </style>
+        <link rel="stylesheet" type="text/css" href="/css/bootstrap.min.css">
+        <link rel="stylesheet" type="text/css" href="/css/style.css">
     </head>
     <body>
         <div id="surface">
-            <div id="content">
+            <div class="container">
                 <div>
                     <h1>Lĩnh vực nghiên cứu</h1>
                 </div>
@@ -60,65 +19,75 @@
                         <div id="field-list-name" style="display: inline-block">
                             <h3 style="margin: 0;">Lĩnh vực</h3>
                         </div>
-                        <a href="" id="create">Thêm</a>
+                        <button type="button" class="btn btn-primary">Thêm</button>
                     </div>
                     <ul class="tree">
                         <li class="has-children">
-                            <img src="public/images/minus.gif" onclick=""/>
+                            <img src="/image/minus.gif" onclick="javascript:Folder_Toggle(this);"/>
                             <a href="">ACM Computing Classification System</a>
                             <ul>
                                 <li class="has-children">
-                                    <img src="public/images/plus.gif"/>
+                                    <img src="/image/plus.gif" onclick="javascript:Folder_Toggle(this);"/>
                                     <a href="">General and refernce</a>
                                 </li>
                                 <li class="has-children">
-                                    <img src="public/images/plus.gif"/>
+                                    <img src="/image/plus.gif" onclick="javascript:Folder_Toggle(this);"/>
                                     <a href="">Hardware</a>
                                 </li>
                                 <li class="has-children">
-                                    <img src="public/images/plus.gif"/>
+                                    <img src="/image/plus.gif" onclick="javascript:Folder_Toggle(this);"/>
                                     <a href="">Computer systems organization</a>
                                 </li>
                                 <li class="has-children">
-                                    <img src="public/images/minus.gif"/>
+                                    <img src="/image/minus.gif" onclick="javascript:Folder_Toggle(this);"/>
                                     <a href="">Networks</a>
-                                    <a href="" id="create">Thêm</a>
-                                    <a href="" id="edit">Sửa</a>
-                                    <a href="" id="del">Xóa</a>
+                                    <button type="button" class="btn btn-primary">Thêm</button>
+                                    <button type="button" class="btn btn-primary">Sửa</button>
+                                    <button type="button" class="btn btn-primary">Xóa</button>
                                     <ul>
                                         <li class="has-children">
-                                            <img src="public/images/plus.gif"/>
+                                            <img src="/image/plus.gif" onclick="javascript:Folder_Toggle(this);"/>
                                             <a href="">Network architectures</a>
                                         </li>
                                         <li class="has-children">
-                                            <img src="public/images/plus.gif"/>
+                                            <img src="/image/plus.gif" onclick="javascript:Folder_Toggle(this);"/>
                                             <a href="">Network protocols</a>
                                         </li>
                                         <li class="has-children">
-                                            <img src="public/images/plus.gif"/>
+                                            <img src="/image/plus.gif"/>
                                             <a href="">Network components</a>
                                         </li>
                                         <li class="has-children">
-                                            <img src="public/images/plus.gif"/>
+                                            <img src="/image/plus.gif"/>
                                             <a href="">Network algorithms</a>
                                         </li>
                                         <li class="has-children">
-                                            <img src="public/images/plus.gif"/>
+                                            <img src="/image/plus.gif"/>
                                             <a href="">Network performance evaluation</a>
                                         </li>
                                         <li class="has-children">
-                                            <img src="public/images/plus.gif"/>
+                                            <img src="/image/plus.gif"/>
                                             <a href="">Network properties</a>
                                         </li>
                                         <li class="has-children">
-                                            <img src="public/images/plus.gif"/>
+                                            <img src="/image/plus.gif"/>
                                             <a href="">Network services</a>
                                         </li>
                                     </ul>
                                 </li>
                                 <li class="has-children">
-                                    <img src="public/images/plus.gif"/>
+                                    <img src="/image/minus.gif" onclick="javascript:Folder_Toggle(this);"/>
                                     <a href="">Software and its engineering</a>
+                                    <ul>
+                                            <li class="has-children">
+                                                <img src="/image/plus.gif" onclick="javascript:Folder_Toggle(this);"/>
+                                                <a href="">Test1</a>
+                                            </li>
+                                            <li class="has-children">
+                                                <img src="/image/plus.gif" onclick="javascript:Folder_Toggle(this);"/>
+                                                <a href="">Test2</a>
+                                            </li>
+                                    </ul>
                                 </li>
                             </ul>
                         </li>
@@ -126,5 +95,6 @@
                 </div>
             </div>
         </div>
+        <script type="text/javascript" src="/js/tree.js"></script>
     </body>
 </html>
