Simple create acc, login, and logout

--- a/views/employee.ejs
+++ b/views/employee.ejs
@@ -9,13 +9,14 @@
     <body>
         <div id="surface">
             <div class="container">
+                <br>
                 <div>
                     <span style="display: inline-block;">
                         <h1>Cán bộ</h1>
                     </span>
                     <div class="create-object">
-                        <button type="button" class="btn">Thêm mới</button>
-                        <button type="button" class="btn">Thêm từ Excel</button>
+                        <button type="button" class="btn btn-primary">Thêm mới</button>
+                        <button type="button" class="btn btn-primary">Thêm từ Excel</button>
                     </div>
                 </div>
                 <br>
