--- a/views/index.ejs
+++ b/views/index.ejs
@@ -19,10 +19,10 @@
                                 <tr>
                                 </tr>
                                 <tr>
-                                    <th>Xin chào, <%= name %></th>
+                                    <th>Xin chào, </th>
                                     <th>
                                         <form action="/" method="POST">
-                                            <input type="submit" value="Đăng xuất">
+                                            <button class="btn btn-success" type="submit">Đăng xuất</button>
                                         </form>
                                     </th>
                                 </tr>
