--- a/views/login.ejs
+++ b/views/login.ejs
@@ -23,17 +23,19 @@
                                     </tr>
                                     <tr>
                                         <th>
-                                            <input class="input-box" type="text" name="username" required>
+                                            <input class="input-box" type="text" name="username" required autocomplete="off">
                                         </th>
                                         <th>
-                                            <input class="input-box" type="password" name="password" required>
+                                            <input class="input-box" type="password" name="password" required autocomplete="off">
                                         </th>
                                         <th>
                                             <button type="submit" class="btn btn-success" id="login-btn">Đăng nhập</button>
                                         </th>
                                     </tr>
                                     <tr>
-                                        <th></th>
+                                        <th>
+                                            <input type='checkbox' name="remember">Remember me
+                                        </th>
                                         <th>
                                             <a id="forgot-password" href="">Quên mật khẩu?</a>
                                         </th>
