--- a/public/css/style.css
+++ b/public/css/style.css
@@ -8,6 +8,9 @@ input {
 ul, li {
     list-style: none;
 }
+button:hover {
+    opacity: 0.8;
+}
 .container {
     max-width: 1140px;
     margin: auto;   
@@ -68,6 +71,12 @@ table#login tbody tr th {
 label {
     font-weight: bold; 
 }
+.create-label {
+    width: 120px;
+}
+.create-label ~ input {
+    border: 1px solid gray;
+}
 #profile-img {
     width: 300px;
     height: 200px;
@@ -76,4 +85,56 @@ label {
 #field-list {
     padding: 0 20px;
     border: 1px solid grey;
+}
+/* Pop up Form */
+.modal {
+    display:none;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgba(0,0,0,0.4);
+}
+
+.modal-content {
+    background-color: #fefefe;
+    margin: 4% auto 15% auto;
+    border: 1px solid #888;
+    width: 40%; 
+	padding-bottom: 30px;
+}
+.close {
+    position: absolute;
+    right: 25px;
+    top: 0;
+    color: #000;
+    font-size: 35px;
+    font-weight: bold;
+}
+.close:hover,.close:focus {
+    color: red;
+    cursor: pointer;
+}
+.animate {
+    animation: zoom 0.6s
+}
+@keyframes zoom {
+    from {transform: scale(0)} 
+    to {transform: scale(1)}
+}
+.sub-container {
+    margin: auto;
+}
+.sub-container button[type='submit'] {
+    margin: auto;
+    display: block;
+}
+.sub-container input {
+    width: 50%;
+}
+.table-edit {
+    display: inline-block;
 }
