Update passport to Route and Controller

--- a/views/field_research.ejs
+++ b/views/field_research.ejs
@@ -42,9 +42,11 @@
                                 <li class="has-children">
                                     <img src="/image/minus.gif" onclick="javascript:Folder_Toggle(this);"/>
                                     <a href="">Networks</a>
-                                    <button type="button" class="btn btn-primary">Thêm</button>
-                                    <button type="button" class="btn btn-primary">Sửa</button>
-                                    <button type="button" class="btn btn-primary">Xóa</button>
+                                    <div class="btn-group">
+                                        <button type="button" class="btn btn-primary">Thêm</button>
+                                        <button type="button" class="btn btn-primary">Sửa</button>
+                                        <button type="button" class="btn btn-primary">Xóa</button>
+                                    </div>
                                     <ul>
                                         <li class="has-children">
                                             <img src="/image/plus.gif" onclick="javascript:Folder_Toggle(this);"/>
