--- a/views/index.ejs
+++ b/views/index.ejs
@@ -21,7 +21,7 @@
                                 <tr>
                                     <th>Xin chào, </th>
                                     <th>
-                                        <form action="/" method="POST">
+                                        <form action="/logout" method="POST">
                                             <button class="btn btn-success" type="submit">Đăng xuất</button>
                                         </form>
                                     </th>
