--- a/views/login.ejs
+++ b/views/login.ejs
@@ -14,7 +14,7 @@
                         <span id="header-logo"></span>
                     </a>
                     <div id="header-user">
-                        <form action="/controllers/authenticateController" method="post">
+                        <form action="/signin" method="post">
                             <table id=login>
                                 <tbody>
                                     <tr>
@@ -34,7 +34,7 @@
                                     </tr>
                                     <tr>
                                         <th>
-                                            <input type='checkbox' name="remember">Remember me
+                                            <input type='checkbox' name="remember"> Lưu đăng nhập
                                         </th>
                                         <th>
                                             <a id="forgot-password" href="">Quên mật khẩu?</a>
