Add username on index page

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -19,7 +19,7 @@
                                 <tr>
                                 </tr>
                                 <tr>
-                                    <th>Xin chào, </th>
+                                    <th>Xin chào, <a href="/profile"><%= name %></a></th>
                                     <th>
                                         <form action="/logout" method="POST">
                                             <button class="btn btn-success" type="submit">Đăng xuất</button>
