--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -3,8 +3,8 @@
     <head>
         <title>TS. Lê Đình Thanh</title>
         <meta charset="utf-8">
-        <link rel="stylesheet" type="text/css" href="public/css/bootstrap.min.css">
-        <link rel="stylesheet" type="text/css" href="public/css/style.css"
+        <link rel="stylesheet" type="text/css" href="/css/bootstrap.min.css">
+        <link rel="stylesheet" type="text/css" href="/css/style.css">
     </head>
     <body>
         <div id="surface">
@@ -15,7 +15,7 @@
                 </div>
                 <span>
                     <div class="component-option">
-                        <img id="profile-img" class="rounded" alt="Cinque Terre" src="public/image/thanos.jpeg">
+                        <img id="profile-img" class="rounded" alt="Cinque Terre" src="/image/thanos.jpeg">
                         <div id="img-option">
                             <button type="button" class="btn" id="update-img">Cập nhật ảnh</button>
                             <button type="button" class="btn" id="del-img">Xóa ảnh</button>
